revert stretching canvas, but probably introduces other bug :facepalm:

--- a/public/style.css
+++ b/public/style.css
@@ -115,8 +115,8 @@ button {
   right: 0;
   margin: auto;
 
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
 
   max-width: 100%;
   max-height: 100%;
